<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SIMP</string>
    <string name="grade_of_new_class">Grade of new class</string>
    <string name="add_new_class">ADD NEW CLASS</string>
    <string name="name_of_new_class">Name of new class</string>
    <string name="put_the_name_here_new_class">Put the name here</string>
    <string name="put_the_grade_here_new_class">Put the grade here</string>
    <string name="add_new_student">ADD NEW STUDENT</string>
    <string name="name_of_the_new_student">Name of the new student</string>
    <string name="put_the_name_here_new_student">Put the name here</string>
    <string name="save_new_class">Save</string>
    <string name="save_new_student">SAVE</string>
    <string name="log_in">LOG IN</string>
    <string name="username">Username</string>
    <string name="insert_username_here">Insert your username here</string>
    <string name="password">Password</string>
    <string name="insert_password_here">Insert your password here</string>
    <string name="are_you_new_sign_in">Are you new? Sign in</string>
    <string name="sign_in">SING IN</string>
    <string name="name">Name</string>
    <string name="insert_your_name_here">Insert your name here</string>
    <string name="surname">Surname</string>
    <string name="insert_your_surname_here">Insert your surname here</string>
    <string name="save_foults_button">SAVE FOULTS</string>
    <string name="add_new_student_button">Add new Student</string>
    <string name="add_new_class_button">ADD NEW CLASS</string>
    <string name="next_button">NEXT</string>
    <string name="no_students_right_now">no_students_right_now</string>
    <string name="no_class_right_now">no_class_right_now</string>
    <string name="unjustified">Unjustified</string>
    <string name="justified">Justified</string>
    <string name="delay">Delay</string>
    <string name="show_totals_button">Show total</string>
    <string name="your_classes">your classes</string>
</resources>