<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="16dp"
        android:background="@color/orange_pastel">

        <ImageView
            android:id="@+id/simp_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/simp_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/luckiest_guy"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simp_image" />

        <TextView
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/log_in"
            app:layout_constraintStart_toStartOf="@+id/log_in"
            app:layout_constraintTop_toBottomOf="@+id/log_in"
            android:fontFamily="@font/luckiest_guy"
            android:drawableStart="@drawable/ic_chevron_black"
            android:paddingStart="6dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/insert_username_here"
            android:paddingStart="6dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/username_text"
            app:layout_constraintStart_toStartOf="@+id/username_text"
            app:layout_constraintTop_toBottomOf="@+id/username_text" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_chevron_black"
            android:fontFamily="@font/luckiest_guy"
            android:paddingStart="6dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/username_edit"
            app:layout_constraintStart_toStartOf="@+id/username_edit"
            app:layout_constraintTop_toBottomOf="@+id/username_edit" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/insert_password_here"
            android:paddingStart="6dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/password_text"
            app:layout_constraintStart_toStartOf="@+id/password_text"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/luckiest_guy"
            android:text="@string/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit" />

        <TextView
            android:id="@+id/singUp_text_logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_chevron_black"
            android:fontFamily="@font/luckiest_guy"
            android:paddingStart="6dp"
            android:text="@string/are_you_new_sign_in"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/singUp_button_logIn"
            app:layout_constraintEnd_toEndOf="@+id/next_button"
            app:layout_constraintStart_toStartOf="@+id/next_button" />

        <Button
            android:id="@+id/singUp_button_logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:fontFamily="@font/luckiest_guy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/singUp_text_logIn"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="@+id/singUp_text_logIn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>