<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddStudentActivity"
        android:background="@color/orange_pastel"
        android:padding="16dp">

        <TextView
            android:id="@+id/add_student_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/luckiest_guy"
            android:text="@string/add_new_student"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_student_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/name_of_the_new_student"
            android:paddingStart="6dp"
            android:textColor="@color/black"
            android:fontFamily="@font/luckiest_guy"
            android:drawableStart="@drawable/ic_chevron_black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_student_text" />

        <EditText
            android:id="@+id/student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="6dp"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/black"
            android:hint="@string/put_the_name_here_new_student"
            app:layout_constraintEnd_toEndOf="@+id/name_student_text"
            app:layout_constraintStart_toStartOf="@+id/name_student_text"
            app:layout_constraintTop_toBottomOf="@+id/name_student_text" />

        <Button
            android:id="@+id/register_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_new_student"
            android:fontFamily="@font/luckiest_guy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>